# Digital-Signer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
digital_signer/: api.py  hooks.py  modules.txt  preview_api.py  test_api.py
digital_signer/config/: desktop.py  docs.py
digital_signer/digital_signer/doctype/document_sign_setting/: document_sign_setting.js  document_sign_setting.json  document_sign_setting.py  test_document_sign_setting.py
digital_signer/public/js/: purchase_invoice.js  purchase_order.js  sales_invoice.js  sales_order.js
